--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -121,6 +121,14 @@ const pagename = cleaned[1]
 		font-size: 1.1rem;
 	}
 
+	.nosideborderleft{
+        border-left: 0px solid var(--bs-border-color) !important;
+    }
+
+    .nosideborderright{
+        border-right: 0px solid var(--bs-border-color);
+    }
+
 	.callout-grid{
 		display: grid;
 		grid-template-columns: 1fr;
