--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,6 +46,8 @@ const pagename = cleaned[1]
 		<link rel="stylesheet" href="/static/css/lightTheme.css" id="lightTheme">
 		<link rel="stylesheet" href="/static/css/darkTheme.css" id="darkTheme" disabled>
 
+		<link rel="stylesheet" href="/static/css/tables.css">
+
 		<script src="/static/js/themes.js" is:inline></script>
 		<link rel="stylesheet" href="/static/css/themes.css">
 		
