--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -68,10 +68,12 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </li> 
 		<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#tangential_normal_basis'>Tangential and normal basis</a>
 		<ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#normal_basis'>Normal basis</a></li>  
-			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#derivatives_angular_velocity'>Derivatives and angular velocity</a></li> 
-			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#normal_tangential_acceleration'>Normal and tangential acceleration</a></li>
-			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#curvature'>Curvature</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#normal_basis'>Normal basis</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#curvature'>Curvature and torsion</a></li>  
+			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#derivatives_angular_velocity'>Basis derivatives and angular velocity</a></li> 
+			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#normal_tangential_acceleration'>Normal and Tangential kinematics</a></li>
+			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#system_comparison'>Tangent lines and osculating circles</a></li>
+      <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#curvature_on_curves'>Curvature on curves</a></li>
 			<li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#system_comparison'>Systems comparison</a></li>
         </ul>
     </li> 
@@ -1155,7 +1157,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 </SubSubSection>
 
 
-<SubSection title="Curvature on curves ">
+<SubSection title="Curvature on curves " id="curvature_on_curves">
     <p>
       Given a parametric curve, its curvature can be directly
       evaluated with:
