--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -85,9 +85,9 @@ Specifically, the two forces act <strong>along the line between the two points w
 
 Zero force members are members in a truss structure that experience no force. They act as support trusses to add stability, but are not load bearing. There are 2 cases where zero force members occur: 
 <Enumerate>
-	<Item> Two noncolinear members share a pin with no support or external forces (Zero force member example, left)
+	<Item> Two noncolinear members share a pin with no support or external forces (Zero force member example, left - look at pin C!)
     </Item>
-	<Item> Two colinear forces with a third noncolinear force on a pin (zero force member example, right)
+	<Item> Two colinear forces with a third noncolinear force on a pin (zero force member example, right - look at pins B and D!)
 </Item>
 </Enumerate>
 
