--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -46,9 +46,11 @@ The main assumptions for trusses and truss structures are:
 <p>
 Because of these assumptions, all truss members are <em>two force members</em>, with the forces on the truss acting <strong>along the axis of the member</strong>. 
 
-If the forces on the truss member "stretch" it, the member is in tension. 
+If the forces on the truss member "stretch" it, the member is in tension.  
 
 If the forces on the truss member "squish" it, the member is in compression. 
+
+In our class, we'll assume that members are <strong>always in tension</strong>. If we solve for the force in a member and get a negative number, we know that member is actually in compression.
 
 <Image src='/Statics/TrussFigures/TensionCompression.jpg' width='5'> Truss member in tension (left) and compression (right)</Image>
 
