--- a/src/pages/sol/axial_loading.astro
+++ b/src/pages/sol/axial_loading.astro
@@ -171,7 +171,7 @@ All internal forces can be obtained from equilibrium analysis only
 <DisplayEquation equation='R_{A} = R_{B} = 0\\' title="Force balance." background="True" />
 <DisplayEquation equation='R_{A} = F\\' title="Reaction force." background="True" />
                   
- After raising the temperature, the total elongation of the rod is still zero. The total elongation is given by:
+ After raising the temperature, total elongation of the rod is still zero. The total elongation is given by:
 
 <DisplayEquation equation='\\delta = \\frac{FL}{EA} + \\alpha L \\Delta T = 0\\' title="Total elongation." background="True" />
 
