--- a/src/pages/sol/torsion.astro
+++ b/src/pages/sol/torsion.astro
@@ -134,7 +134,7 @@ where <InlineEquation equation="c" /> is the radius and <InlineEquation equation
 
 The shear stress in the elastic range varies linearly with the radial position in the section.
 
-<Image src="/Solid_Mechanics/Torsion-Figures/StressDistribution.png" width="4"> Stress distribution </Image>
+<Image src="/Solid_Mechanics/Torsion-Figures/StressDistribution.png" width="5"> Stress distribution </Image>
 
 <em>Note:</em>  shaft under torque <InlineEquation equation="T" /> rotating at angular speed <InlineEquation equation="\\omega" /> transmits power  <InlineEquation equation="P" />.
  
@@ -143,6 +143,14 @@ The shear stress in the elastic range varies linearly with the radial position i
 </SubSubSection>
 
 <SubSubSection title="Shear Stress: Polar Moment of Inertia" id="polar_moment_of_inertia">
+
+<CalloutContainer slot="cards">
+    <CalloutCard title="Heads  up!">
+        <p>
+           For a  <strong> moment of inertia </strong> summary, go to the "Moment of Inertia Summary" section of the <a href="/sol/bending">Bending</a> page.
+            </p>
+    </CalloutCard>
+</CalloutContainer>
 
 <DisplayEquation equation="J = \\int_0^R{\\rho^2dA} = \\int_0^R{\\rho^2(2\\pi\\rho d\\rho)dA} =2\\pi \\int_0^R{\\rho^3d\\rho} = \\frac{\\pi R^4}{2} = \\frac{\\pi D^4}{32}\\" title="Solid shaft (radius and diameter)." background="True"/>
 
