--- a/src/pages/sol/strain.astro
+++ b/src/pages/sol/strain.astro
@@ -8,6 +8,8 @@ import Itemize from "../../components/Itemize.astro"
 import Item from "../../components/Item.astro" 
 import InlineEquation from "../../components/InlineEquation.astro" 
 import DisplayEquation from "../../components/DisplayEquation.astro" 
+import CalloutCard from "../../components/CalloutCard.astro"
+import CalloutContainer from "../../components/CalloutContainer.astro"
 ---
 
 <Layout title="Strain">
@@ -55,13 +57,13 @@ Dimensionless [mm/mm, in/in, or %]
 
 <SubSection title="Normal Strain" id="normal_strain">
 
-<Image src="/Solid_Mechanics/Strain-Figures/Normal Strain.png" width="3.5"> Normal strain</Image>
+<Image src="/Solid_Mechanics/Strain-Figures/Normal Strain.png" width="4"> Normal strain</Image>
 
 <p class="mb-0">
     Relative change in <strong>length</strong> of a line element oriented in arbitrary direction <InlineEquation equation="n" />.
 </p>
 
-<DisplayEquation equation=" \\varepsilon_n = lim_{B  \\xrightarrow{} A \\rm\\ along \\rm\\ n} \\frac{\\Delta s - \\Delta s'}{\\Delta s} \\" />
+<DisplayEquation equation=" \\varepsilon_n = lim_{B  \\xrightarrow{} A \\rm\\ along \\rm\\ n} \\frac{\\Delta s - \\Delta s'}{\\Delta s} \\" title="Axial (normal)strain." background="True"/>
 
 <!--  <DisplayEquation equation=" \\varepsilon_n = lim_{B-&gt;A \\rm\\ along \\rm\\ n} \\frac{\\Delta s = \\Delta s&#39;}{\\Delta s} \\" /> -->
 
@@ -76,13 +78,13 @@ Dimensionless [mm/mm, in/in, or %]
 </p>
  
 
-<DisplayEquation equation=" \\epsilon_n = \\frac{\\delta}{L}\\" />
+<DisplayEquation equation=" \\epsilon_n = \\frac{\\delta}{L}\\" title="Axial (normal) strain." background="True"/>
 
 <Itemize>
     <Item> <strong>Engineering</strong> or nominal (normal) strain: Average normal strain using the original (undeformed) total length.
     <DisplayEquation equation=" \\varepsilon_{eng} = \\frac{\\delta}{L_0}\\" id="sta-eng" background="True" title="Engineering strain"/> </Item>
     <Item> <strong>True</strong> (normal) strain: Integrate infinitesimal normal strains.
-    <Image src="/Solid_Mechanics/Strain-Figures/True Strain.png" width="4"> True strain</Image>
+    <Image src="/Solid_Mechanics/Strain-Figures/True Strain.png" width="5.5"> True strain</Image>
     
 
     <DisplayEquation equation=" \\varepsilon_{true} = ln(1 + \\frac{\\delta}{L_0})\\" id="sta-ts"  derivation="True" background="True" title="True strain">
@@ -103,7 +105,7 @@ Dimensionless [mm/mm, in/in, or %]
 <Image src="/Solid_Mechanics/Strain-Figures/Shear Strain.png" width="3.5"> Shear strain</Image>
 
 
-<DisplayEquation equation=" \\gamma_{nt} = lim_{\\begin{matrix} B \\xrightarrow{} A \\rm\\ along \\rm\\ n\\\\ C \\xrightarrow{} A \\rm\\ along \\rm\\ t \\end{matrix}} (\\frac{\\pi}{2} - \\theta') \\" />
+<DisplayEquation equation=" \\gamma_{nt} = lim_{\\begin{matrix} B \\xrightarrow{} A \\rm\\ along \\rm\\ n\\\\ C \\xrightarrow{} A \\rm\\ along \\rm\\ t \\end{matrix}} (\\frac{\\pi}{2} - \\theta') \\" title="Shear strain." background="True"/>
 
 <!--  <DisplayEquation equation=" \\gamma_{nt} = lim_{\\begin{matrix} B-&gt;A \\rm\\ along \\rm\\ n\\\\ C-&gt;A \\rm\\&nbsp;along \\rm\\ t \\end{matrix}} (\\frac{\\pi}{2} - \\theta &#39;) \\" /> -->
 
@@ -111,18 +113,14 @@ Dimensionless [mm/mm, in/in, or %]
     When strains are small, the small angle approximation, <InlineEquation equation="\\sin(\\theta)\\approx \\theta" />, results in
 </p>
 
-<DisplayEquation equation="\\gamma = \\frac{\\pi}{2} - \\theta \\approx \\frac{\\delta}{L}\\" />
+<DisplayEquation equation="\\gamma = \\frac{\\pi}{2} - \\theta \\approx \\frac{\\delta}{L}\\" title="Shear strain with the small angle approximaion" background="True"/>
 
 </SubSection>
 
 <SubSubSection title="Average Shear Strain" id="average_shear_strain">
 <Image src="/Solid_Mechanics/Strain-Figures/Avg Shear Strain.png" width="5"> Average shear strain</Image>
 
-
-<DisplayEquation equation="tan(\\gamma) = \\frac{\\delta}{L} \\xrightarrow{} \\gamma = \\frac{\\delta}{L}\\" />
-<DisplayEquation equation="\\gamma = \\alpha + \\beta\\" />
-<DisplayEquation equation="\\gamma = \\frac{\\delta_x}{L_y} + \\frac{\\delta_y}{L_x}\\" />
-
+<DisplayEquation equation="\\begin{align*} &dtan(\\gamma) = \\frac{\\delta}{L} \\xrightarrow{} \\gamma = \\frac{\\delta}{L}	\\\\ &\\gamma = \\alpha + \\beta	 \\\\ &\\gamma = \\frac{\\delta_x}{L_y} + \\frac{\\delta_y}{L_x} \\\\ \\end{align*}" title="Average shear strain." background="True"/>
 
 <Itemize>
     <Item> <strong>Engineering</strong> (shear) strain: Compute angle from length changes and original (undeformed) total length.</Item>
@@ -131,11 +129,22 @@ Dimensionless [mm/mm, in/in, or %]
 </SubSubSection>
 
 <SubSection title="Strain Tensor" id="strain_tensor">
+
+<CalloutContainer slot="cards">
+    <CalloutCard title="Heads  up!">
+        <p>
+            Similar to stress tensor, <strong> strain tensor </strong> also builds on this content later in the course.
+            </p>
+            <p>
+                Learn more about this topic on the <a href="/sol/stress_transformation">Stress Transformation</a> page.
+            </p>
+    </CalloutCard>
+</CalloutContainer>
 <p class="mb-0">
     The components of normal and shear strain can be combined into the strain tensor. This is a symmetric matrix.
 </p>
 
-<DisplayEquation equation=" E = \\begin{bmatrix} \\varepsilon_{x} & \\gamma_{xy} & \\gamma_{xz} \\\\ \\gamma_{yx} & \\varepsilon_{y} &\\gamma_{yz} \\\\ \\gamma_{zx} & \\gamma_{zy} &\\varepsilon_{z} \\end{bmatrix} \\" />
+<DisplayEquation equation=" E = \\begin{bmatrix} \\varepsilon_{x} & \\gamma_{xy} & \\gamma_{xz} \\\\ \\gamma_{yx} & \\varepsilon_{y} &\\gamma_{yz} \\\\ \\gamma_{zx} & \\gamma_{zy} &\\varepsilon_{z} \\end{bmatrix} \\" title="Strain tensor." background="True"/>
 
 <!-- <DisplayEquation equation=" E&nbsp;= \\begin{bmatrix} \\varepsilon_{x} &amp; \\gamma_{xy} &amp; \\gamma_{xz} \\\\ \\gamma_{yx} &amp; \\varepsilon_{y} &amp; \\gamma_{yz} \\\\ \\gamma_{zx} &amp;\\gamma_{zy} &amp; \\varepsilon_{z} \\end{bmatrix} \\" /> -->
 
