--- a/src/pages/sol/transverse_shear.astro
+++ b/src/pages/sol/transverse_shear.astro
@@ -12,6 +12,8 @@ import Itemize from "../../components/Itemize.astro"
 import Item from "../../components/Item.astro" 
 import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
+import Example from "../../components/Example.astro"
+import InlineCanvas from "../../components/InlineCanvas.astro"
 ---
 <Layout title="Transverse Shear">
 
@@ -23,12 +25,7 @@ import CalloutCard from "../../components/CalloutCard.astro"
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#rect_beam'>Rectangular Beam Cross-Section</a></li> 
                 <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#i_beam'>I-Shaped Beam Cross-Section</a></li>  
             </ul>
-        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#shear_flow'>Built-up Members/Beams: Shear Flow</a>
-          <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#adhesives'>Adhesives</a></li> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#fasteners'>Fasteners</a></li>  
-        </ul>
-        </li> 
+        <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#shear_flow'>Built-up Members/Beams: Shear Flow</a></li> 
     </ul>
 </div>
 <Section title="Transverse Shear" id="transverse_shear">
@@ -195,81 +192,110 @@ Shear flow is most applicable in design situations such as built-up beams.
 Built-up beams are beams that have been put together with either an adhesive (glue, epoxy, etc) or fasteners (nails, bolts, etc). Calculating shear flow allows for determining how much adhesive or how often a fastener is needed.
 
 <Image src="/Solid_Mechanics/TransverseShear-Figures/BuiltUpBeams.png" width="5"></Image>
-</SubSection>
 
-<SubSubSection title="Adhesives" id="adhesives">
 <p>
 <strong>Adhesives</strong> supply resistance along the length of the contacting parts. Determine the minimum shear strength at these contacting/weak points using the shear stress equation.
 </p>
 
-<strong>Example:</strong> The following I-beam is composed of 4 boards glued together. The vertical shear is is <InlineEquation equation="V = 100 \\text{ } N"/>.
-Find the minumum required shear strength for the glue (<InlineEquation equation="\\tau_{glue}" />). 
-<Image src="/Solid_Mechanics/TransverseShear-Figures/AdhesiveExample.png" width="2"></Image>
+<Example id="blt-adh" title="The following I-beam is composed of 4 boards glued together" solution="True">
+  <div class="d-flex">
+      <p>
+        The vertical shear is is <InlineEquation equation="V = 100 \\text{ } N"/>.
+        Find the minumum required shear strength for the glue (<InlineEquation equation="\\tau_{glue}" />). 
+        <br>
+        </p>
+        <Image src="/Solid_Mechanics/TransverseShear-Figures/AdhesiveExample.png" width="5"></Image>
+      <InlineCanvas id="blt-adh-c" width="300" height="200"/>
+  </div>
+  <div slot="solution">
+      <p>
+                
+        <DisplayEquation equation="\\begin{align*} &\\tau_{AB} = \\frac{V Q_A}{I t_A},\\  &\\tau_{BD} = \\frac{V Q_D}{I t_D}\\ \\end{align*}"/>
+        
+        <InlineEquation equation="V" /> : shear force
 
-<DisplayEquation equation="\\begin{align*} &\\tau_{AB} = \\frac{V Q_A}{I t_A},\\  &\\tau_{BD} = \\frac{V Q_D}{I t_D}\\ \\end{align*}" title="The larger shear stress is the minimum required strength" background="True" derivation="True" id="adh-exp">
+        <DisplayEquation equation="V = 100 \\text{ } N" />
+        
+        <InlineEquation equation="Q" /> : First area moment of inertia of cut section ( <InlineEquation equation="Q = \\Sigma \\bar{y}'A'" /> )
 
-  <Image src="/Solid_Mechanics/TransverseShear-Figures/IBeamQ.png" width="1.5"></Image>
+        <Image src="/Solid_Mechanics/TransverseShear-Figures/IBeamQ.png" width="1.5"></Image>
 
-  <DisplayEquation equation="Q_A = A \\bar{y_A} = 3.13*10^4 \\text{ } mm^3" />
-  <DisplayEquation equation="Q_D = A \\bar{y_D} = 9.38*10^4 \\text{ } mm^3" />
+        <DisplayEquation equation="Q_A = A \\bar{y_A} = 3.13*10^4 \\text{ } mm^3" />
+        <DisplayEquation equation="Q_D = A \\bar{y_D} = 9.38*10^4 \\text{ } mm^3" />
 
-  <Image src="/Solid_Mechanics/TransverseShear-Figures/IBeamMOI.png" width="1"></Image>
+        <InlineEquation equation="I" /> : Second area moment of inertia of whole cross-sectional area
+        
+        <Image src="/Solid_Mechanics/TransverseShear-Figures/IBeamMOI.png" width="1"></Image>
+      
+        <DisplayEquation equation="I = I_1 + 2 I_2 = 1.04*10^7 \\text{ } mm^4" />
+        <DisplayEquation equation="I_1 = \\frac{1}{12}b_1 h_1^3 = 8.79*10^5 \\text{ } mm^4" />
+        <DisplayEquation equation="I_2 = \\frac{1}{12}b_2 h_2^3 +A_2d_2^2 = 47.85*10^5 \\text{ } mm^4 " />
+        
+        <InlineEquation equation="t" /> : length of connected region
 
-  <DisplayEquation equation="I = I_1 + 2 I_2 = 1.04*10^7 \\text{ } mm^4" />
-  <DisplayEquation equation="I_1 = \\frac{1}{12}b_1 h_1^3 = 8.79*10^5 \\text{ } mm^4" />
-  <DisplayEquation equation="I_2 = \\frac{1}{12}b_2 h_2^3 +A_2d_2^2 = 47.85*10^5 \\text{ } mm^4 " />
+        <Image src="/Solid_Mechanics/TransverseShear-Figures/IBeamThick.png" width="1"></Image>
+      
+        <DisplayEquation equation="t_A = 25 \\text{ } mm" />
+        <DisplayEquation equation="t_D = 25 \\text{ } mm" />
+        
+        Solve.
 
-  <Image src="/Solid_Mechanics/TransverseShear-Figures/IBeamThick.png" width="1"></Image>
+        <DisplayEquation equation="\\tau_{AB} = 12.0 \\text{ } kPa" />
+        <DisplayEquation equation="\\tau_{BD} = 36.1 \\text{ } kPa" />
+      
+        <DisplayEquation equation="\\begin{align*} &\\tau_{AB} < \\tau_{BD} \\  &\\tau_{glue} = 36.1 \\text{ } kPa\\ \\end{align*}" />
 
-  <DisplayEquation equation="t_A = 25 \\text{ } mm" />
-  <DisplayEquation equation="t_D = 25 \\text{ } mm" />
+        
+        </p>
+  </div>
+</Example>
 
-  <DisplayEquation equation="\\tau_{AB} = 12.0 \\text{ } kPa" />
-  <DisplayEquation equation="\\tau_{BD} = 36.1 \\text{ } kPa" />
-
-  <DisplayEquation equation="\\begin{align*} &\\tau_{AB} < \\tau_{BD} \\  &\\tau_{glue} = 36.1 \\text{ } kPa\\ \\end{align*}" />
-
-</DisplayEquation>
-
-
-</SubSubSection>
-
-<SubSubSection title="Fasteners" id="fasteners">
 <p>
 <strong>Fasteners</strong> supply resistance at fixed intervals. Use the shear flow formula to analyze the beam.
 </p>
 
-<strong>Example:</strong> The followling beams are composed of two boards nailed together with 6 nails at an interval of <InlineEquation equation="\\Delta s = 50 \\text{ } mm"/>. The shear force is <InlineEquation equation="V = 100 \\text{ } kN"/>. 
-Find the shear flow (<InlineEquation equation="q"/>) and the load each fastener carries (<InlineEquation equation="f_n"/>).
+<Example id="blt-fst" title="The followling beam is composed of 2 boards connected by 6 nails." solution="True">
+  <div class="d-flex">
+    <p>
+      The nails are at an interval of of <InlineEquation equation="\\Delta s = 50 \\text{ } mm"/>. The shear force is <InlineEquation equation="V = 100 \\text{ } kN"/>. 
+      Find the shear flow (<InlineEquation equation="q"/>) and the load each fastener carries (<InlineEquation equation="f_n"/>).
+    </p>
+
+    <Image src="/Solid_Mechanics/TransverseShear-Figures/FastenerExample.png" width="8"></Image>
+      <InlineCanvas id="blt-fst-c" width="300" height="200"/>
+  </div>
+  <div slot="solution">
+      <p>
+          <DisplayEquation equation="\\begin{align*} &q = \\frac{VQ}{I},\\  &f_n = \\frac{q*s_{total}}{4}\\ \\end{align*}"/>
+
+          Shear flow.
+
+          <Image src="/Solid_Mechanics/TransverseShear-Figures/BoardsQ.png" width="2"></Image>
+
+          <DisplayEquation equation="Q = (b*h)\\bar{y} = 3.75*10^5 \\text{ } mm^3" />
+
+          <DisplayEquation equation="I = \\frac{1}{12}b h^3 = 2.5*10^7 \\text{ } mm^4" />
+
+          <DisplayEquation equation="q = 1.5 \\text{ } \\frac{kN}{mm}" />
+
+          Force in the nail. 
+
+          <DisplayEquation equation="\\Sigma F_{total} = \\frac{1}{2}f_n + f_n + \\frac{1}{2}f_n = 2f_n" />
+          
+          Because there are 2 nails in each row, 
+
+          <DisplayEquation equation="\\Sigma F_{total} = 2*F_{total} = 2*2f_n = 4f_n" />
+
+          <DisplayEquation equation="s_{total} = 2\\Delta s = 100 \\text{ } mm^4" />
+
+          <DisplayEquation equation="f_n = 37.5 \\text{ } kN" />
+
+
+        </p>
+  </div>
+</Example>
 
 <Image src="/Solid_Mechanics/TransverseShear-Figures/FastenerExample.png" width="5.5"></Image>
 
-<DisplayEquation equation="\\begin{align*} &q = \\frac{VQ}{I},\\  &f_n = \\frac{q*s_{total}}{4}\\ \\end{align*}" title="Shear flow in fasteners" background="True" derivation="True" id="fsn-exp">
-
-  <Image src="/Solid_Mechanics/TransverseShear-Figures/BoardsQ.png" width="2"></Image>
-
-  <DisplayEquation equation="Q = (b*h)\\bar{y} = 3.75*10^5 \\text{ } mm^3" />
-
-  <DisplayEquation equation="I = \\frac{1}{12}b h^3 = 2.5*10^7 \\text{ } mm^4" />
-
-  <DisplayEquation equation="q = 1.5 \\text{ } \\frac{kN}{mm}" />
-
-
-  <DisplayEquation equation="\\Sigma F_{total} = \\frac{1}{2}f_n + f_n + \\frac{1}{2}f_n = 2f_n" />
-  
-  Because there are 2 nails in each row, 
-
-  <DisplayEquation equation="\\Sigma F_{total} = 2*F_{total} = 2*2f_n = 4f_n" />
-
-  <DisplayEquation equation="s_{total} = 2\\Delta s = 100 \\text{ } mm^4" />
-
-  <DisplayEquation equation="f_n = 37.5 \\text{ } kN" />
-
-
-
-
-</DisplayEquation>
-
-
-</SubSubSection>
+</SubSection>
 </Layout>
